--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libtomcrypt"]
 	path = libtomcrypt
 	url = https://github.com/libtom/libtomcrypt.git
+[submodule "phc-winner-argon2"]
+	path = phc-winner-argon2
+	url = https://github.com/P-H-C/phc-winner-argon2.git
